--- a/index.html
+++ b/index.html
@@ -29,16 +29,18 @@
 <!-- Inject necessary tokens -->
 <script src="token.js"></script>
 
+<!-- Inject base map layers -->
+<script src="base_map_layers.js"></script>
+
 <script>
 
-var mymap = L.map('mapid').setView([37.3490,-121.9542], 13);
+var mymap = L.map('mapid', {
+    center: [37.3490,-121.9542], 
+    zoom: 13,
+    layers: recommendedBaseMapLayer
+});
 
-L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
-    attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-    maxZoom: 19,
-    id: 'mapbox/streets-v11',
-    accessToken: tokens.MapboxAccessToken
-}).addTo(mymap);
+L.control.layers(baseMapLayers).addTo(mymap);
 
 
 </script>
