--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
    integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
    crossorigin=""></script>
 
+<!-- Google Maps API. TODO: fill in your GOOGLE_MAPS_API_KEY -->
+<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY" async defer></script>
+
+<!-- Leaflet.GoogleMutant plugin for Google Map -->
+<script src='https://unpkg.com/leaflet.gridlayer.googlemutant@latest/Leaflet.GoogleMutant.js'></script>
+
 <!-- Define mapid -->
 <div id="mapid"></div>
 
