--- a/index.html
+++ b/index.html
@@ -15,10 +15,16 @@
    crossorigin=""></script>
 
 <!-- Google Maps API. TODO: fill in your GOOGLE_MAPS_API_KEY -->
-<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=GOOGLE_MAPS_API_KEY" async defer></script>
 
-<!-- Leaflet.GoogleMutant plugin for Google Map -->
+<!-- Leaflet.GoogleMutant plugin for Google Maps -->
 <script src='https://unpkg.com/leaflet.gridlayer.googlemutant@latest/Leaflet.GoogleMutant.js'></script>
+
+<!-- leaflet providers, Contains configurations for various free tile providers — OSM, OpenCycleMap, Stamen, Esri, etc.	 -->
+<!-- https://github.com/leaflet-extras/leaflet-providers -->
+<!-- Note that the current version HERE's service can not work, see https://github.com/leaflet-extras/leaflet-providers/issues/342-->
+<script src="leaflet-providers.js"></script>
+
 
 <!-- Define mapid -->
 <div id="mapid"></div>
