--- a/index-template.html
+++ b/index-template.html
@@ -15,7 +15,7 @@
    crossorigin=""></script>
 
 <!-- Google Maps API. TODO: fill in your GOOGLE_MAPS_API_KEY -->
-<script src="https://maps.googleapis.com/maps/api/js?key=GOOGLE_MAPS_API_KEY" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key={{.Tokens.GoogleMapsAPIKey}}" async defer></script>
 
 <!-- Leaflet.GoogleMutant plugin for Google Maps -->
 <script src='https://unpkg.com/leaflet.gridlayer.googlemutant@latest/Leaflet.GoogleMutant.js'></script>
